# cpp_protobuf_plugin_example

./: CMakeLists.txt  main.cpp
